# dt-browser

./: CLAUDE.md  Makefile  pyproject.toml
.claude/skills/: textual-testing.md
.github/workflows/: ci.yml
src/dt_browser/: __init__.py  bookmarks.py  browser.py  column_metadata.py  column_selector.py  custom_table.py  expression_box.py  filter_box.py  polars_backend.py  save_df_modal.py
tests/: conftest.py  test_auto_width.py  test_bookmarks_columns.py  test_browsing.py  test_column_metadata.py  test_expressions.py  test_filtering.py  test_resize.py  test_search_focus.py  test_search_scroll_perf.py  test_snapshots.py
